--- a/resources/Laundry/Masters/Garments/Insert/Html/Hbs/GarmentsInsert.html
+++ b/resources/Laundry/Masters/Garments/Insert/Html/Hbs/GarmentsInsert.html
@@ -1,50 +1,62 @@
-<div class="row">
-    <div class="col">
-        <div class="card">
-            <div class="card-body">
-
-                <form id="FormVertical" onsubmit="return false;">
-                    <div class="row">
-                        <div class="col">
-                            <label class="col-form-label fs-2">Garment Name</label>
+<div class="card">
+    <div class="card-header">
+        <div class="row">
+            <div class="col">Masters/Garments/Insert</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+    
+                    <form id="FormVertical" onsubmit="return false;">
+                        <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control fs-2" name="GarmentName" id="GarmentName"
-                                    aria-describedby="emailHelp" required="">
-                                <div class="invalid-feedback">
-                                    Should not be empty!
+                                <label class="col-form-label fs-2">Garment Name</label>
+                                <div class="col">
+                                    <input type="text" class="form-control fs-2" name="GarmentName" id="GarmentName"
+                                        aria-describedby="emailHelp" required="">
+                                    <div class="invalid-feedback">
+                                        Should not be empty!
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <label class="col-form-label fs-2">Garment Description</label>
+                        <div class="row">
                             <div class="col">
-                                <textarea class="form-control fs-2" name="GarmentDescription" id="GarmentDescription"
-                                    required=""></textarea>
-                                <div class="invalid-feedback">
-                                    Should not be empty!
+                                <label class="col-form-label fs-2">Garment Description</label>
+                                <div class="col">
+                                    <textarea class="form-control fs-2" name="GarmentDescription" id="GarmentDescription"
+                                        required=""></textarea>
+                                    <div class="invalid-feedback">
+                                        Should not be empty!
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <label class="col-md-6 col-form-label fs-2">Price</label>
+                        <div class="row">
                             <div class="col">
-                                <input type="number" min="1" class="form-control fs-2" name="Price" id="Price"
-                                    required="">
-                                <div class="invalid-feedback">
-                                    Should not be empty!
+                                <label class="col-md-6 col-form-label fs-2">Price</label>
+                                <div class="col">
+                                    <input type="number" min="1" class="form-control fs-2" name="Price" id="Price"
+                                        required="">
+                                    <div class="invalid-feedback">
+                                        Should not be empty!
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-            <div class="card-footer text-muted">
-                <button class="btn btn-success fs-3" id="GarmentsSaveButtonId">Save</button>
+                    </form>
+                </div>
+                <div class="card-footer text-muted">
+                    <button class="btn btn-success fs-3" id="GarmentsSaveButtonId">Save</button>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="card-footer text-muted">
+
+        Footer
+
     </div>
 </div>
